--- a/index.html
+++ b/index.html
@@ -1,5 +1,52 @@
-<html>
+<!DOCTYPE html>
+
+<html lang="en">
+    <head>
+        <title>WhatMikeSaid.com</title>
+
+        <meta http-equiv="content-type" content="text/html; charset=UTF8" />
+        <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+        <script src="assets/javascript/main.js"></script>
+
+        <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+        <link href="assets/css/main.css" rel="stylesheet" media="screen" />
+        <link href="assets/css/bubbles.css" rel="stylesheet" media="screen" />
+    </head>
+
     <body>
-        <h1>Hello, world!</h1>
+        <div class="mike-container">
+            <img src="assets/images/mike.png" width="635" height="500" class="mike-image" />
+
+            <div class="content-container">
+                <a href="#" class="button ask-button" id="ask-mike-button">Ask Mike!</a>
+
+                <div id="score-content">
+                    <a href="#" class="button ask-again-button" id="retry-button">Ask Mike again</a>
+
+                    <blockquote class="rectangle-speech-border mike-bubble">
+                        <p class="mike-score"><span id="score"></span></p>
+                    </blockquote>
+
+                    <div class="mike-heard" id="mike-heard">
+                        <h2>What Mike heard...</h2>
+
+                        <hr />
+
+                        <dl>
+                            <dt>Devs:</dt>
+                            <dd id="mike-heard-devs"></dd>
+                            <dt>PO:</dt>
+                            <dd id="mike-heard-po"></dd>
+                        </dl>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--
+        <div class="footer">
+            Brought to you by <a href="http://www.net-a-porter.com">NET-A-PORTER</a>
+        </div>
+        -->
     </body>
 </html>
