Add head animation

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
         <meta http-equiv="content-type" content="text/html; charset=UTF8" />
         <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+        <script src="assets/javascript/jquery.keyframes.min.js"></script>
         <script src="assets/javascript/main.js"></script>
 
         <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
@@ -15,7 +16,8 @@
 
     <body>
         <div class="mike-container">
-            <img src="assets/images/mike.png" width="635" height="500" class="mike-image" />
+            <img src="assets/images/mike_head.png" width="154" height="153" class="mike-image-head" id="mike-head" />
+            <img src="assets/images/mike_body.png" width="635" height="349" class="mike-image-body" id="mike-body" />
 
             <div class="content-container">
                 <a href="#" class="button ask-button" id="ask-mike-button">Ask Mike!</a>
