--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
         <meta http-equiv="content-type" content="text/html; charset=UTF8" />
         <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+        <script src="file:///Users/pete/work/formgenie/app/root/static/resources/jquery.min.js"></script>
         <script src="assets/javascript/jquery.keyframes.min.js"></script>
         <script src="assets/javascript/main.js"></script>
 
