Add sounds, animation and hoem page body

--- a/index.html
+++ b/index.html
@@ -21,7 +21,20 @@
             <img src="assets/images/mike_body.png" width="635" height="349" class="mike-image-body" id="mike-body" />
 
             <div class="content-container">
-                <a href="#" class="button ask-button" id="ask-mike-button">Ask Mike!</a>
+                <div id="home-content">
+                    <img src="assets/images/wms_logo.png" width="600" height="74" alt="WhatMikeSaid.com" />
+
+                    <div class="home-section">
+                        <a href="#" class="button ask-button" id="ask-mike-button">Ask Mike!</a>
+                    </div>
+
+                    <div class="home-section">
+                        <hr />
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce augue
+                        tellus, placerat sit amet magna in, dictum facilisis felis. Morbi non arcu
+                        ac sem feugiat porta. Nam pellentesque arcu lectus.
+                    </div>
+                </div>
 
                 <div id="score-content">
                     <a href="#" class="button ask-again-button" id="retry-button">Ask Mike again</a>
@@ -46,10 +59,9 @@
             </div>
         </div>
 
-        <!--
         <div class="footer">
-            Brought to you by <a href="http://www.net-a-porter.com">NET-A-PORTER</a>
+            Brought to you by
+            <a href="http://www.net-a-porter.com"><img src="assets/images/nap.jpg" width="412" height="17" alt="NET-A-PORTER.COM" class="nap-logo" /></a>
         </div>
-        -->
     </body>
 </html>
