Add HTML5 sound and random rotate notes

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
 
                     <div class="home-section">
                         <hr />
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce augue
-                        tellus, placerat sit amet magna in, dictum facilisis felis. Morbi non arcu
-                        ac sem feugiat porta. Nam pellentesque arcu lectus.
+                        Need help in your PLANNING POKER&reg; session? Ask Mike Cohn to help you
+                        out – and find out what the team is thinking.
                     </div>
                 </div>
 
@@ -44,7 +43,7 @@
                     </blockquote>
 
                     <div class="mike-heard" id="mike-heard">
-                        <h2>What Mike heard...</h2>
+                        <h2>What the team was thinking...</h2>
 
                         <hr />
 
@@ -60,8 +59,13 @@
         </div>
 
         <div class="footer">
-            Brought to you by
-            <a href="http://www.net-a-porter.com"><img src="assets/images/nap.jpg" width="412" height="17" alt="NET-A-PORTER.COM" class="nap-logo" /></a>
+            <p>
+                Created by
+                <a href="http://www.net-a-porter.com"><img src="assets/images/nap.jpg" width="412" height="17" alt="NET-A-PORTER.COM" class="nap-logo" /></a> during a Hack Day &ndash; &copy; 2104
+            </p>
+            <small>
+                PLANNING POKER&reg; is a reg. trademark of Mountain Goat Software, LLC. Sequence of values is © Mountain Goat Software, LLC.
+            </small>
         </div>
     </body>
 </html>
