--- a/index.html
+++ b/index.html
@@ -67,5 +67,16 @@
                 PLANNING POKER&reg; is a reg. trademark of Mountain Goat Software, LLC. Sequence of values is © Mountain Goat Software, LLC.
             </small>
         </div>
+<script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-47466717-1']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+</script>
     </body>
 </html>
