Fix positioning for ipad

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 
     <body>
         <div class="mike-container">
-            <img src="assets/images/mike_head.png" width="154" height="153" class="mike-image-head" id="mike-head" />
-            <img src="assets/images/mike_body.png" width="635" height="349" class="mike-image-body" id="mike-body" />
+            <div class="mike-image">
+                <img src="assets/images/mike_head.png" width="154" height="153" class="mike-image-head" id="mike-head" />
+                <img src="assets/images/mike_body.png" width="635" height="349" class="mike-image-body" id="mike-body" />
+            </div>
 
             <div class="content-container">
                 <div id="home-content">
