Clip image to prevent scroll and change NAP logo

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="footer">
             <p>
                 Created by
-                <a href="http://www.net-a-porter.com"><img src="assets/images/nap.jpg" width="412" height="17" alt="NET-A-PORTER.COM" class="nap-logo" /></a> during a Hack Day &ndash; &copy; 2104
+                <a href="http://www.net-a-porter.com"><img src="assets/images/nap.png" width="415" height="22" alt="THE NET-A-PORTER GROUP" class="nap-logo" /></a> during a Hack Day &ndash; &copy; 2104
             </p>
             <small>
                 PLANNING POKER&reg; is a reg. trademark of Mountain Goat Software, LLC. Sequence of values is © Mountain Goat Software, LLC.
